# taint-analysis

./: .codeclimate.yml  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py
examples/vulnerable_code/django_examples/: django_XSS.py  django_XSS2.py  django_path_traversal.py  django_sql_injection.py  some_taint_file.py
taint_module/: __main__.py  usage.py
taint_module/analysis/: __init__.py  base_analysis.py  constraint_table.py  reaching_definitions_taint.py
taint_module/control_flow_graph/: __init__.py  base_visitor.py  expr_visitor.py  graph.py
taint_module/core/: module_definitions.py  node_types.py  project_handler.py  transformer.py
taint_module/formatters/: json.py  screen.py  text.py
taint_module/helpers/: utils.py
taint_module/helpers/cf_graph_helpers/: base_visitor_helper.py  expr_visitor_helper.py
taint_module/helpers/core_helpers/: ast_helper.py
taint_module/helpers/visit_helper/: call_visitor.py  label_visitor.py  vars_visitor.py
taint_module/helpers/vulnerabilities_helper/: vulnerability_helper.py
taint_module/helpers/web_frameworks_helper/: framework_helper.py
taint_module/vulnerabilities/: trigger_definitions_parser.py  vulnerabilities.py
taint_module/vulnerability_definitions/: all_trigger_words.json  django_trigger_words.pyt
taint_module/web_frameworks/: __init__.py  framework_adaptor.py
tests/: usage_test.py
tests/vulnerabilities/: vulnerabilities_test.py
