[tool.poetry]
name = "taint-analysis"
version = "0.1.0"
description = ""
authors = ["y.romanchuk <y.romanchuk@bi.zone>"]
packages = [
    { include = "taint_module" },
    { include = "taint_module/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "^8.13.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
/(
    \.git
  | \.venv
  | examples
  | docs
)/
'''

[tool.isort]
line_length = 120
profile = "black"
skip = [".venv", "examples", "docs"]
# add for black compatible, more info: https://black.readthedocs.io/en/stable/the_black_code_style.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
